<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.FragmentAccount"
    android:padding="20dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_profile"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"

            />
        
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_profile_icon"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="40dp"
            app:cardPreventCornerOverlap="false"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txt_profile"
            >
            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile_user"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_information"
            android:text="@string/txt_information"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_profile_icon"
            android:textStyle="bold"/>

<!--Names-->
        <TextView
            android:id="@+id/txt_names"
            android:text="@string/txt_name"
            android:layout_below="@+id/txt_information"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_names"
            android:text="@string/tv_names"
            android:layout_below="@+id/txt_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            />

<!--        Email-->
        <TextView
            android:id="@+id/text_email"
            android:text="@string/txt_email"
            android:layout_below="@+id/txt_names"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_email_profile"
            android:text="@string/tv_email"
            android:layout_below="@+id/txt_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            />
<!--Date born-->
        <TextView
            android:id="@+id/txt_born"
            android:text="@string/txt_time_born"
            android:layout_below="@+id/text_email"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_born"
            android:text="@string/tv_born"
            android:layout_below="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            />
<!--        Member -->
        <TextView
            android:id="@+id/txt_member_profile"
            android:text="@string/txt_member"
            android:layout_below="@+id/txt_born"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_member_profile"
            android:text="@string/tv_member"
            android:layout_below="@+id/txt_born"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            />

<!--            Phone number-->
        <TextView
            android:id="@+id/txt_phone_number_profile"
            android:text="@string/txt_phone_number"
            android:layout_below="@+id/txt_member_profile"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_phone_number_profile"
            android:text="@string/txt_phone_number"
            android:layout_below="@+id/txt_member_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            />
<!--                Account state-->
        <TextView
            android:id="@+id/txt_account_state_profile"
            android:text="@string/txt_account_state"
            android:layout_below="@+id/txt_phone_number_profile"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_account_state_profile"
            android:text="@string/tv_estado_cuenta"
            android:layout_below="@+id/txt_phone_number_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:id="@+id/txt_options"
            android:text="@string/txt_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_account_state_profile"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="20sp"
            />
<!--        Edit profile-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit_profile"
            android:layout_below="@+id/txt_options"
            app:icon="@drawable/ic_edit_item"
            app:iconGravity="end"
            android:text="@string/btn_edit_profile"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/m_button_height"
            app:cornerRadius="20dp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close_session"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txt_options"
            app:icon="@drawable/ic_close_session"
            android:text="@string/btn_text_close_session"
            app:iconGravity="end|start"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/m_button_height"
            app:cornerRadius="20dp"/>

    </RelativeLayout>


</ScrollView>