<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro_email">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center">

        <ImageView
            android:src="@drawable/new_user"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

        <TextView
            android:text="@string/txt_sign_up_new_use"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_new_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_email"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:layout_marginTop="15dp"
            >


            <EditText
                android:id="@+id/input_email_new_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_new_user_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_password"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true"
            >


            <EditText
                android:id="@+id/input_pass_new_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_new_user_pass_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_repeat_password"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true"
            >


            <EditText
                android:id="@+id/input_pass_check_new_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            android:layout_width="180dp"
            android:layout_height="@dimen/m_button_height"
            android:layout_marginTop="10dp"
            app:cornerRadius="20dp"
            android:text="@string/txt_sign_up"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>